# virustotal-upload-tui

./: .env.example  LICENSE  main.py  pyproject.toml  requirements.txt
