[project]
name = "virustotal-upload-tui"
version = "0.1.0"
description = "Upload to VirusTotal from the terminal. Avoid the annoying CAPTCHA, which NEVER lets you upload through GUI."
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1",
    "questionary>=2.1",
    "requests>=2.32",
]
